ci: wip for Java 11 migration